<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:contentInsetEnd="0dp"
    app:contentInsetStart="0dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    app:contentInsetEnd="0dp"
    app:contentInsetStart="0dp">
 <!--   <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        style="@style/detailstitles"
        android:background="@color/colorAccent1"
        app:layout_constraintBottom_toTopOf="@id/imageView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="0.0"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginLeft="@dimen/padding2"
        android:padding="@dimen/padding"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/overview"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintRight_toLeftOf="@+id/releasedate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/releasedate"
        style="@style/detailstitles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/releasedate"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/padding3"
        android:layout_marginTop="@dimen/padding2"
        app:layout_constraintBottom_toTopOf="@+id/userrating"

        app:layout_constraintLeft_toRightOf="@id/imageView1"
        app:layout_constraintTop_toTopOf="@id/imageView1"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/userrating"
        android:fontFamily="@font/roboto"
        android:text="@string/userrating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/detailstitles"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/padding3"
        android:layout_marginTop="@dimen/padding2"
        app:layout_constraintBottom_toTopOf="@+id/markAsFavorite"
        app:layout_constraintLeft_toRightOf="@id/imageView1"
        app:layout_constraintTop_toBottomOf="@+id/releasedate"
        app:layout_constraintWidth_percent="0.2" />


    <TextView
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView1"
        app:layout_constraintBottom_toTopOf="@+id/trailers"
        app:layout_constraintWidth_percent="0.7"
        style="@style/details"/>

   <Button
       android:id="@+id/markAsFavorite"
       style="@style/detailsButton"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginLeft="@dimen/padding3"
       android:layout_marginTop="@dimen/padding2"
       android:background="@color/colorAccent1"
       android:text="@string/markasfav"
       app:layout_constraintLeft_toRightOf="@id/imageView1"
       app:layout_constraintTop_toBottomOf="@+id/userrating"
       app:layout_constraintWidth_percent="0.20" />

    <ImageView
        android:id="@+id/favoritesymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding2"
        android:background="@mipmap/nonfavorite"
        app:layout_constraintBottom_toBottomOf="@+id/markAsFavorite"
        app:layout_constraintLeft_toRightOf="@id/markAsFavorite"
        app:layout_constraintStart_toEndOf="@+id/markAsFavorite"
        app:layout_constraintTop_toTopOf="@+id/markAsFavorite"
        app:layout_constraintWidth_percent="0.20" />
    <TextView
        android:id="@+id/trailer_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/padding2"
        style="@style/marginLeftRight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview"
        app:layout_constraintBottom_toTopOf="@+id/trailers"
        android:fontFamily="@font/roboto"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/trailer"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trailers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/margin"
        app:layout_constraintTop_toBottomOf="@+id/trailer_tv"
        app:layout_constraintBottom_toTopOf="@+id/trailers_tv"/>

    <TextView
        android:id="@+id/trailers_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/padding2"
        style="@style/marginLeftRight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trailers"
        app:layout_constraintBottom_toTopOf="@+id/reviews"
        android:fontFamily="@font/roboto"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/reviews"/>

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/reviews"
       style="@style/margin"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/trailers_tv" />

   <!--    <TextView-->
<!--        android:id="@+id/releasedate"-->
<!--        style="@style/details"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:padding="@dimen/padding"-->
<!--        android:text="@string/releasedate"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintLeft_toRightOf="@+id/releasedate_tv"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/userrating"-->
<!--        app:layout_constraintWidth_percent="0.7" />-->
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>